# frr

./: .gitignore  Cargo.toml
data/hudnik/: test1.txt
data/test2/: test2.txt
data/zajec/: test3.txt
src/: dir_crawl.rs  find_and_replace.rs  focused.rs  has_border.rs  main.rs
