[package]
name = "frr"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
home = "0.5.11"
iced = { version = "0.13", features = ["async-std", "debug"] }
lipsum = "0.9.1"
log = "0.4.25"
rfd = "0.15.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
