[package]
name = "frr"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
home = "0.5.11"
iced = { version = "0.13.1", features = [
    "async-std",
    "debug",
    "advanced",
    "markdown",
    "tokio",
] }
lipsum = "0.9.1"
log = "0.4.25"
rfd = "0.15.2"
tokio = { version = "1.32", features = ["fs", "io-util"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
